--- a/index.html
+++ b/index.html
@@ -260,16 +260,15 @@
             </div>
         </section>
 
-        <!-- Profile Photo -->
-                <div class="flex-shrink-0 lg:ml-auto">
+        <div class="flex-shrink-0 lg:ml-auto">
                     <div class="relative w-72 h-96 lg:w-80 lg:h-[28rem]">
                         <div class="absolute inset-0 border-4 border-accent rounded-3xl transform rotate-6 transition-transform duration-300 hover:rotate-12"></div>
                         <div class="relative w-full h-full overflow-hidden rounded-3xl border-4 border-accent shadow-2xl glow-effect">
-                            <img src="chhiring.png" alt="Chhiring Moktan - IT Support Specialist" class="w-full h-full object-cover object-center">
+                            <img src="profile.jpg" alt="Chhiring Moktan - IT Support Specialist" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>  <!-- This closes the flex container -->
         </section>
 
         <!-- About Section -->
