--- a/index.html
+++ b/index.html
@@ -240,35 +240,37 @@
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <!-- Hero Section -->
+       <!-- Hero Section -->
         <section id="hero" class="min-h-[90vh] flex items-center pt-20 pb-16 fade-in">
-            <div class="max-w-4xl">
-                <p class="text-lg md:text-xl lg:text-2xl text-accent font-mono tracking-widest mb-4 animate-pulse">
-                    Hi! I'm Chhiring Moktan
-                </p>
-                <h1 class="hero-title text-5xl sm:text-6xl md:text-7xl font-extrabold leading-tight text-white mb-4">
-                    IT Support <br class="hidden sm:block" />Specialist
-                </h1>
-                <h2 class="hero-subtitle text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-400 mb-6 md:mb-8">
-                    Microsoft 365, Azure AD, & End-User Support
-                </h2>
-                <p class="text-base sm:text-lg md:text-xl lg:text-2xl text-gray-300 max-w-2xl leading-relaxed">
-                    Motivated professional with hands-on experience providing Level 1 and 2 support across key enterprise environments. I craft seamless digital operations by merging technical skill with a strong focus on client satisfaction.
-                </p>
-                <a href="#expertise" class="mt-8 md:mt-10 inline-block bg-accent text-white font-bold py-3 px-6 md:px-8 rounded-md hover:bg-green-500 transition duration-300 pulse-animation text-sm md:text-base">
-                    Explore My Capabilities
-                </a>
-            </div>
-        </section>
-
-        <div class="flex-shrink-0 lg:ml-auto">
+            <div class="flex flex-col lg:flex-row items-center gap-12 lg:gap-16 w-full">
+                <div class="max-w-4xl">
+                    <p class="text-lg md:text-xl lg:text-2xl text-accent font-mono tracking-widest mb-4 animate-pulse">
+                        Hi! I'm Chhiring Moktan
+                    </p>
+                    <h1 class="hero-title text-5xl sm:text-6xl md:text-7xl font-extrabold leading-tight text-white mb-4">
+                        IT Support <br class="hidden sm:block" />Specialist
+                    </h1>
+                    <h2 class="hero-subtitle text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-400 mb-6 md:mb-8">
+                        Microsoft 365, Azure AD, & End-User Support
+                    </h2>
+                    <p class="text-base sm:text-lg md:text-xl lg:text-2xl text-gray-300 max-w-2xl leading-relaxed">
+                        Motivated professional with hands-on experience providing Level 1 and 2 support across key enterprise environments. I craft seamless digital operations by merging technical skill with a strong focus on client satisfaction.
+                    </p>
+                    <a href="#expertise" class="mt-8 md:mt-10 inline-block bg-accent text-white font-bold py-3 px-6 md:px-8 rounded-md hover:bg-green-500 transition duration-300 pulse-animation text-sm md:text-base">
+                        Explore My Capabilities
+                    </a>
+                </div>
+                
+                <!-- Profile Photo -->
+                <div class="flex-shrink-0 lg:ml-auto">
                     <div class="relative w-72 h-96 lg:w-80 lg:h-[28rem]">
                         <div class="absolute inset-0 border-4 border-accent rounded-3xl transform rotate-6 transition-transform duration-300 hover:rotate-12"></div>
                         <div class="relative w-full h-full overflow-hidden rounded-3xl border-4 border-accent shadow-2xl glow-effect">
-                            <img src="profile.jpg" alt="Chhiring Moktan - IT Support Specialist" class="w-full h-full object-cover object-center">
+                            <img src="chhiring.png" alt="Chhiring Moktan - IT Support Specialist" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                 </div>
-            </div>  <!-- This closes the flex container -->
+            </div>
         </section>
 
         <!-- About Section -->
